--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^12.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.5",
