--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.5",
+    "fabric": "^6.6.6",
     "framer-motion": "^12.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
