--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.5",
+    "bootstrap-icons": "^1.13.1",
     "fabric": "^6.6.6",
     "framer-motion": "^12.9.4",
     "jspdf": "^3.0.1",
